use agentic package